<resources>
    <string name="app_name">ContactList</string>
    <string name="id">ID</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">email</string>
    <string name="age">Age</string>

    <string-array name="names">
        <item>John</item>
        <item>Matt</item>
        <item>Johnny</item>
        <item>Chriss</item>
        <item>Russell</item>
        <item>Wesley</item>
        <item>Mathieu</item>
        <item>Lukas</item>
        <item>Tomas</item>
        <item>Peter</item>
    </string-array>

    <string-array name="surnames">
        <item>Snow</item>
        <item>Daemon</item>
        <item>Cash</item>
        <item>Waver</item>
        <item>Cooper</item>
        <item>Snipes</item>
        <item>Viel</item>
        <item>Fryd</item>
        <item>Boch</item>
        <item>Littlefinger</item>
    </string-array>

    <string-array name="emails">
        <item>Snow@gmail.com</item>
        <item>Daemon@gmail.com</item>
        <item>Cash@gmail.com</item>
        <item>Waver@gmail.com</item>
        <item>Cooper@gmail.com</item>
        <item>Snipes@gmail.com</item>
        <item>Viel@gmail.com</item>
        <item>Fryd@gmail.com</item>
        <item>Boch@gmail.com</item>
        <item>Littlefinger@gmail.com</item>
    </string-array>

    <string-array name="age">
        <item>24</item>
        <item>25</item>
        <item>55</item>
        <item>44</item>
        <item>25</item>
        <item>63</item>
        <item>35</item>
        <item>36</item>
        <item>77</item>
        <item>12</item>
    </string-array>

    <string-array name="id">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>
    <string name="title_activity_modify_database">ModifyDatabase</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="remove">Remove</string>
    <string name="complete_all_the_fields">Complete all the fields</string>
    <string name="name_to_type">Name:</string>
    <string name="surname_field">Surname</string>
    <string name="emailField">Email</string>
    <string name="age_field">Age</string>
    <string name="cancel">Cancel</string>
    <string name="who_do_you_want_to_remove">Who do you want to remove</string>

</resources>
